--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,7 @@ jobs:
         fail_ci_if_error: true
         files: ./coverage.xml
         flags: unittests-${{ matrix.python-version }}
-        name: pylhe
+        name: lheutils
         token: ${{ secrets.CODECOV_TOKEN }}
 
   docker:
@@ -79,5 +79,5 @@ jobs:
         fetch-depth: 0
     - name: Build Docker image
       run: |
-        docker build . --file docker/Dockerfile --tag pylhe/pylhe:$GITHUB_SHA
+        docker build . --file docker/Dockerfile --tag lheutils/lheutils:$GITHUB_SHA
         docker images
