--- a/tbump.toml
+++ b/tbump.toml
@@ -1,4 +1,4 @@
-github_url = "https://github.com/scikit-hep/pylhe/"
+github_url = "https://github.com/scikit-hep/lheutils/"
 
 [version]
 current = "1.0.1"
