--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -33,6 +33,11 @@ repos:
       args: ["--fix", "--show-fixes"]
     - id: ruff-format
 
+-   repo: https://github.com/PyCQA/flake8
+    rev: 7.1.1
+    hooks:
+    - id: flake8
+
 -   repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.18.2
     hooks:
