--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -44,7 +44,7 @@ repos:
     - id: mypy
       files: src
       args: [--show-error-codes]
-      additional_dependencies: [pylhe]
+      additional_dependencies: [pylhe, pyhepmc]
 
 - repo: https://github.com/pre-commit/pygrep-hooks
   rev: v1.10.0
